[TS148] Tags endpoint be listed or paginated